--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "mongoose": "^7.2.1",
     "morgan": "1.10.0",
     "nanoid": "^3.3.4",
-    "path": "^0.12.7",
-    "yarn": "^1.22.19"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "eslint": "7.19.0",
@@ -27,6 +26,7 @@
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "5.2.0",
-    "nodemon": "2.0.15"
+    "nodemon": "2.0.15",
+    "yarn": "^1.22.19"
   }
 }
