--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "5.2.0",
-    "nodemon": "2.0.15",
-    "yarn": "^1.22.19"
+    "nodemon": "2.0.15"
   }
 }
